internal code changes and Privacy Policy for Filipino language is now completed

--- a/es-es/privacy-policy/index.html
+++ b/es-es/privacy-policy/index.html
@@ -244,7 +244,7 @@
               <p><strong>Datos de uso</strong> se refiere a los datos recopilados automáticamente, ya sea generados por el uso del Servicio o por la propia infraestructura del Servicio (por ejemplo, la duración de una visita a la página).</p>
             </li>
             <li>
-              <p><strong>Sitio web</strong> se refiere al equipo de RareFrostbites, accesible desde <a href="../../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a ></p>
+              <p><strong>Sitio web</strong> se refiere al equipo de RareFrostbites, accesible desde <a href="../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a ></p>
             </li>
             <li>
               <p><strong>Usted</strong> se refiere a la persona que accede o utiliza el Servicio, o la team/ studios u otra entidad legal en nombre de la cual dicha persona accede o utiliza el Servicio, según corresponda.</p>
@@ -503,7 +503,7 @@
               </li>
               <li>
                 <p>Al visitar esta página en nuestro sitio web:<br>
-                  <a href="../../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact</a></p>
+                  <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact</a></p>
               </li>
             </ul>
           </div>
