--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -244,10 +244,10 @@
               <p><strong>Usage Data</strong> ay nai-refer sa mga data na na-collect automatically, either na nabuo sa pamamagitan ng paggamit ng Service o from the Service infrastructure (example, ang tagal ng pag-visit sa page).</p>
             </li>
             <li>
-              <p><strong>Website</strong> nai-refer sa RareFrostbites Team, naa-access from <a href="../../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></p>
+              <p><strong>Website</strong> nai-refer sa RareFrostbites Team, naa-access from <a href="../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></p>
             </li>
             <li>
-              <p><strong>Ikaw</strong> means ay na ang individual na pag-access o paggamit ng Service, o ang team/ studios, o iba pang legal entity para sa kung saan ang mga individual ay naa-access o gingamit ang Service, kung applicable.</p>
+              <p><strong>Ikaw</strong> means ay ang individual na pag-access o paggamit ng Service, o ang team/ studios, o iba pang legal entity para sa kung saan ang mga individual ay naa-access o gingamit ang Service, kung applicable.</p>
             </li>
           </ul>
         </div>
@@ -410,7 +410,7 @@
           <p>Ang information mo, kasama'ng Personal Data, ay pino-process sa mga operating office ng Team at sa iba pang mga place kung saan makikita ang mga party ay involve sa pag-process. Meaning ay 'to na ang information na ito ay pwedeng i-transfer sa — at ma-maintain sa — mga computer na malo-locate sa labas ng estado Mo, probinsya, bansa o iba pang governmental jurisdiction kung saan pwedeng iba ang mga batas sa protection ng data kaysa sa mga nasa jurisdiction Mo.</p>
         </div>
         <div class="paragraph">
-          <p>Ang pahintulot mo sa Privacy Policy na'to na fina-follow ng pagsu-submit mo ng naturang information ay nagre-represent sa kasunduan Mo sa pag-transfer na 'yon.</p>
+          <p>Ang pahintulot mo sa Privacy Policy na'to na pina-follow ng pagsu-submit mo ng naturang information ay nagre-represent sa kasunduan Mo sa pag-transfer na 'yon.</p>
         </div>
         <div class="paragraph">
           <p>Gagawin ng Team ang lahat ng mga reasonably step na kinakailangan para ma-ensure na ang data Mo ay ginagamot nang secure at in accordance sa Privacy Policy na'to at walang pagta-transfer ng Personal Data Mo na magaganap sa isang organization o isang bansa unless kung may saktong mga control sa lugar including na ang security ng ang data Mo at iba pang personal information.</p>
@@ -460,51 +460,51 @@
           <h1>Privacy ng mga Bata</h1>
         </div>
         <div class="paragraph">
-          <p>Ang aming Service ay hindi uma-address anyone sa ilalim ng age na 13. Hindi namin sinasadyang nagk-collect ng personal na identifiable information galing sa sinumang wala pang 13 years old. Kung Ikaw ay magulang ka o guardian at alam Mo na ang anak Mo ay nagbigay sa Amin ng Personal Data, please i-contact sa amin. Kung malalaman Namin na Kami ay nagko-collect ng Personal na Data mula sa sinumang wala pang 13 taong gulang nang walang pag-verify ng pahintulot ng magulang, gagawa Kami ng mga hakbang upang alisin ang impormasyong iyon mula sa Aming mga server.</p>
+          <p>Ang aming Service ay hindi uma-address anyone sa ilalim ng age na 13. Hindi namin sinasadyang nagk-collect ng personal na identifiable information galing sa sinumang wala pang 13 years old. Kung Ikaw ay magulang ka o guardian at alam Mo na ang anak Mo ay nagbigay sa Amin ng Personal Data, please i-contact sa amin. Kung malalaman Namin na Kami ay nagko-collect ng Personal na Data mula sa sinumang wala pang 13 years old nang walang pag-verify ng pahintulot ng magulang, gagawa Kami ng mga step para i-remove ang information na iyon galing sa mga server Namin.</p>
         </div>
         <div class="paragraph">
-          <p>If We need to rely on consent as a legal basis for processing Your information and Your country requires consent from a parent, We may require Your parent's consent before We collect and use that information.</p>
+          <p>Kung kailangan naming mag-rely sa consent bilang legal basis para sa pag-process ng impormasyon Mo at ang bansa Mo ay nagre-require ng consent galing sa isang magulang, pwedeng i-require namin ang pahintulot ng magulang Mo bago Namin i-collect at gamitin ang information na iyon.</p>
         </div>
 
         <div class="title">
-          <h1>Links to Other Websites</h1>
+          <h1>Mga Link sa mga Iba pang Website</h1>
         </div>
         <div class="paragraph">
-          <p>Our Service may contain links to other websites that are not operated by Us. If You click on a third party link, You will be directed to that third party's site. We strongly advise You to review the Privacy Policy of every site You visit.</p>
+          <p>Ang Service namin ay pwedeng mag-contain ng mga link sa iba pang mga website na hindi Aming ino-operate. Kung mag-click ka sa isang third party link, ida-direct ka sa site ng third party na 'yon. We strongly advise sa Iyo na i-review ang Privacy Policy ng every site na binibisita Mo.</p>
         </div>
         <div class="paragraph">
-          <p>We have no control over and assume no responsibility for the content, privacy policies or practices of any third party sites or services.</p>
+          <p>Wala kaming control at walang responsibility para sa content, mga privacy policy o mga practices ng mga any third party site o service.</p>
         </div>
 
         <div class="title">
-          <h1>Changes to this Privacy Policy</h1>
+          <h1>Mga Change sa Privacy Policy na'to</h1>
         </div>
         <div class="paragraph">
-          <p>We may update Our Privacy Policy from time to time. We will notify You of any changes by posting the new Privacy Policy on this page.</p>
+          <p>Pwede naming i-update ang aming Privacy Policy paminsan-minsan. ino-notify ka namin ng mga any change by posting ng bagong Privacy Policy sa page na'to.</p>
         </div>
         <div class="paragraph">
-          <p>We will let You know via email and/or a prominent notice on Our Service, prior to the change becoming effective and update the "Last updated" date at the top of this Privacy Policy.</p>
+          <p>Sasabihin namin sa Iyo via email at/o isang prominent notice sa Service Namin, bago maging effective ang pagtse-change at i-update ang petsa ng "Huling na-update" sa taas ng Privacy Policy na'to.</p>
         </div>
         <div class="paragraph">
-          <p>You are advised to review this Privacy Policy periodically for any changes. Changes to this Privacy Policy are effective when they are posted on this page.</p>
+          <p>You are advised na i-review ang Privacy Policy na'to periodically for any changes. Ang mga pagtse-change sa Privacy Policy na'to ay effective kapag nai-post ang mga 'to sa page na'to.</p>
         </div>
 
         <div class="title">
-          <h1>Contact Us</h1>
+          <h1>I-Contact Kami</h1>
         </div>
         <div class="paragraph">
-          <p>If you have any questions about this Privacy Policy, You can contact us:</p>
+          <p>Kung mayroon kang mga question about sa Privacy Policy na'to, pwede kang mag-contact sa'min:</p>
         </div>
         <div class="lists">
           <ul>
             <li>
-              <p>By email:<br>
+              <p>Gamit ang email:<br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" style="margin-left: 10px;">rarefrostbitesteam@gmail.com</a><br>
                 <a href="mailto:rarefrostbitesteam@gmail.com" style="margin-left: 10px;">rarefrostbitesteam@outlook.com</a></p>
             </li>
             <li>
-              <p>By visiting this page on our website:<br>
-                <a href="https://rarefrostbites.pages.dev/contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact</a></p>
+              <p>Gamit ang pagbi-visit sa page na'to sa'ming website:<br>
+                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact</a></p>
             </li>
           </ul>
         </div>
