--- a/hi-in/privacy-policy/index.html
+++ b/hi-in/privacy-policy/index.html
@@ -63,7 +63,8 @@
     <link rel="stylesheet" href="../../css/assets/sidebar.css">
     
     
-    <link rel="stylesheet" href="../../css/#.css">
+    <link rel="stylesheet" href="../../css/privacy-policy/image.css">
+    <link rel="stylesheet" href="../../css/privacy-policy/texts.css">
 
 
 
