--- a/hi-in/privacy-policy/index.html
+++ b/hi-in/privacy-policy/index.html
@@ -65,6 +65,15 @@
     
     <link rel="stylesheet" href="../../css/privacy-policy/image.css">
     <link rel="stylesheet" href="../../css/privacy-policy/texts.css">
+    <style>
+      @media only screen and (min-width: 800px) {
+        .body .content {
+          width: 800px;
+          margin-left: auto;
+          margin-right: auto;
+        }
+      }
+    </style>
 
 
 
