--- a/en-us/privacy-policy/index.html
+++ b/en-us/privacy-policy/index.html
@@ -63,6 +63,7 @@
     <link rel="stylesheet" href="../../css/assets/sidebar.css">
     
     
+    <link rel="stylesheet" href="../../css/privacy-policy/content.css">
     <link rel="stylesheet" href="../../css/privacy-policy/image.css">
     <link rel="stylesheet" href="../../css/privacy-policy/texts.css">
     <style>
