--- a/hi-in/privacy-policy/index.html
+++ b/hi-in/privacy-policy/index.html
@@ -5,13 +5,13 @@
 
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="RareFrostbites Team" />
-    <meta property="og:url" content="https://rarefrostbites.pages.dev/hi-in/#">
+    <meta property="og:url" content="https://rarefrostbites.pages.dev/hi-in/privacy-policy">
     <meta property="og:title" content="'गोपनीयता नीति">
     <meta property="og:description" content="हर Frostbits की सुरक्षा हमारी सर्वोच्च प्राथमिकता है।">
     <meta property="og:image" content="https://rarefrostbites.pages.dev/media/assets/privacy-policy/privacy-policy.png">
     
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://rarefrostbites.pages.dev/hi-in/#">
+    <meta property="twitter:url" content="https://rarefrostbites.pages.dev/hi-in/privacy-policy">
     <meta property="twitter:title" content="'गोपनीयता नीति">
     <meta property="twitter:description" content="हर Frostbits की सुरक्षा हमारी सर्वोच्च प्राथमिकता है।">
     <meta property="twitter:image" content="https://rarefrostbites.pages.dev/media/assets/privacy-policy/privacy-policy.png">
@@ -615,49 +615,49 @@
 
           <div class="selection" id="selection">
             <div class="select" style="margin-top: 0px;">
-              <a href="/en-us/#"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="संयुक्त राज्य अमेरिका"> US</h5></a>
+              <a href="/en-us/privacy-policy"><h5><img src="https://flagcdn.com/us.svg" width="30" alt="संयुक्त राज्य अमेरिका"> US</h5></a>
             </div>
             <div class="select">
-              <a href="/en-uk/#"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="यूनाइटेड किंगडम"> UK</h5></a>
+              <a href="/en-uk/privacy-policy"><h5><img src="https://flagcdn.com/gb.svg" width="30" alt="यूनाइटेड किंगडम"> UK</h5></a>
             </div>
             <div class="select">
-              <a href="/es-es/#"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="स्पेन"> ES</h5></a>
+              <a href="/es-es/privacy-policy"><h5><img src="https://flagcdn.com/es.svg" width="30" alt="स्पेन"> ES</h5></a>
             </div>
             <div class="select">
-              <a href="/fil-ph/#"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="फिलीपींस"> PH</h5></a>
+              <a href="/fil-ph/privacy-policy"><h5><img src="https://flagcdn.com/ph.svg" width="30" alt="फिलीपींस"> PH</h5></a>
             </div>
             <div class="select">
-              <a href="/id-id/#"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="इंडोनेशिया"> ID</h5></a>
+              <a href="/id-id/privacy-policy"><h5><img src="https://flagcdn.com/id.svg" width="30" alt="इंडोनेशिया"> ID</h5></a>
             </div>
             <div class="select">
-              <a href="/ja-jp/#"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="जापान"> JP</h5></a>
+              <a href="/ja-jp/privacy-policy"><h5><img src="https://flagcdn.com/jp.svg" width="30" alt="जापान"> JP</h5></a>
             </div>
             <div class="select">
-              <a href="/km-kh/#"><h5><img src="https://flagcdn.com/kh.svg" width="30" alt="कंबोडिया"> KH</h5></a>
+              <a href="/km-kh/privacy-policy"><h5><img src="https://flagcdn.com/kh.svg" width="30" alt="कंबोडिया"> KH</h5></a>
             </div>
             <div class="select">
-              <a href="/ko-kr/#"><h5><img src="https://flagcdn.com/kr.svg" width="30" alt="कोरिया"> KR</h5></a>
+              <a href="/ko-kr/privacy-policy"><h5><img src="https://flagcdn.com/kr.svg" width="30" alt="कोरिया"> KR</h5></a>
             </div>
             <div class="select">
-              <a href="/ms-my/#"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="मलेशिया"> MY</h5></a>
+              <a href="/ms-my/privacy-policy"><h5><img src="https://flagcdn.com/my.svg" width="30" alt="मलेशिया"> MY</h5></a>
             </div>
             <div class="select">
-              <a href="/my-bu/#"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="म्यांमार"> BU</h5></a>
+              <a href="/my-bu/privacy-policy"><h5><img src="https://flagcdn.com/mm.svg" width="30" alt="म्यांमार"> BU</h5></a>
             </div>
             <div class="select">
-              <a href="/pt-pt/#"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="पुर्तगाल"> PT</h5></a>
+              <a href="/pt-pt/privacy-policy"><h5><img src="https://flagcdn.com/pt.svg" width="30" alt="पुर्तगाल"> PT</h5></a>
             </div>
             <div class="select">
-              <a href="/ru-ru/#"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="रूस"> RU</h5></a>
+              <a href="/ru-ru/privacy-policy"><h5><img src="https://flagcdn.com/ru.svg" width="30" alt="रूस"> RU</h5></a>
             </div>
             <div class="select">
-              <a href="/vi-vn/#"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="वियतनाम"> VN</h5></a>
+              <a href="/vi-vn/privacy-policy"><h5><img src="https://flagcdn.com/vn.svg" width="30" alt="वियतनाम"> VN</h5></a>
             </div>
             <div class="select">
-              <a href="/zh-cn/#"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="चीन"> CN</h5></a>
+              <a href="/zh-cn/privacy-policy"><h5><img src="https://flagcdn.com/cn.svg" width="30" alt="चीन"> CN</h5></a>
             </div>
             <div class="select" style="margin-bottom: 0px;">
-              <a href="/zh-tw/#"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="ताइवान"> TW</h5></a>
+              <a href="/zh-tw/privacy-policy"><h5><img src="https://flagcdn.com/tw.svg" width="30" alt="ताइवान"> TW</h5></a>
             </div>
           </div>
         </div>
