--- a/hi-in/privacy-policy/index.html
+++ b/hi-in/privacy-policy/index.html
@@ -236,7 +236,7 @@
               <p><strong>उपयोग डेटा</strong> स्वचालित रूप से एकत्र किए गए डेटा को संदर्भित करता है, या तो सेवा के उपयोग से या स्वयं सेवा अवसंरचना से उत्पन्न होता है (उदाहरण के लिए, एक पृष्ठ विज़िट की अवधि)।</p>
             </li>
             <li>
-              <p><strong>वेबसाइट</strong> रेयरफ्रॉस्टबाइट्स टीम को संदर्भित करता है, जिस तक <a href="../../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></ से पहुंचा जा सकता है। पी>
+              <p><strong>वेबसाइट</strong> रेयरफ्रॉस्टबाइट्स टीम को संदर्भित करता है, जिस तक <a href="../../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></p>
             </li>
             <li>
               <p><strong>आप</strong> का अर्थ है सेवा तक पहुंचने या उपयोग करने वाला व्यक्ति, या टीम/स्टूडियो, या अन्य कानूनी इकाई जिसकी ओर से ऐसा व्यक्ति सेवा का उपयोग या उपयोग कर रहा है, जैसा लागू हो।</p>
@@ -352,7 +352,7 @@
               <p><strong>अपना खाता प्रबंधित करने के लिए:</strong> सेवा के उपयोगकर्ता के रूप में अपना पंजीकरण प्रबंधित करने के लिए। आपके द्वारा प्रदान किया जाने वाला व्यक्तिगत डेटा आपको सेवा की विभिन्न कार्यात्मकताओं तक पहुंच प्रदान कर सकता है जो आपके लिए एक पुन: के रूप में उपलब्ध हैंसूचीबद्ध उपयोगकर्ता।</p>
             </li>
             <li>
-              <p><strong>एक अनुबंध के प्रदर्शन के लिए:</strong> आपके द्वारा खरीदे गए उत्पादों, वस्तुओं या सेवाओं या सेवा के माध्यम से हमारे साथ किसी अन्य अनुबंध के लिए खरीद अनुबंध का विकास, अनुपालन और उपक्रम।</strong> पी>
+              <p><strong>एक अनुबंध के प्रदर्शन के लिए:</strong> आपके द्वारा खरीदे गए उत्पादों, वस्तुओं या सेवाओं या सेवा के माध्यम से हमारे साथ किसी अन्य अनुबंध के लिए खरीद अनुबंध का विकास, अनुपालन और उपक्रम।</strong></p>
             </li>
             <li>
               <p><strong>आपसे संपर्क करने के लिए:</strong> ईमेल, टेलीफोन कॉल, एसएमएस, या इलेक्ट्रॉनिक संचार के अन्य समकक्ष रूपों द्वारा आपसे संपर्क करने के लिए, जैसे कि अपडेट या कार्यात्मकता से संबंधित सूचनात्मक संचार के संबंध में मोबाइल एप्लिकेशन की पुश सूचनाएं, उत्पादों या अनुबंधित सेवाओं, सुरक्षा अद्यतनों सहित, जब आवश्यक हो या उनके कार्यान्वयन के लिए उचित हों।</p>
@@ -389,7 +389,7 @@
           <h2>आपके व्यक्तिगत डेटा को बनाए रखना</h2>
         </div>
         <div class="paragraph">
-          <p>टीम आपके व्यक्तिगत डेटा को केवल तब तक बनाए रखेगी जब तक कि इस गोपनीयता नीति में निर्धारित उद्देश्यों के लिए आवश्यक हो। हम अपने कानूनी दायित्वों का पालन करने के लिए आवश्यक सीमा तक आपके व्यक्तिगत डेटा को बनाए रखेंगे और उपयोग करेंगे (उदाहरण के लिए, यदि हमें लागू कानूनों का पालन करने के लिए आपके डेटा को बनाए रखना आवश्यक है), विवादों का समाधान, और हमारे कानूनी समझौतों और नीतियों को लागू करना।</ पी>
+          <p>टीम आपके व्यक्तिगत डेटा को केवल तब तक बनाए रखेगी जब तक कि इस गोपनीयता नीति में निर्धारित उद्देश्यों के लिए आवश्यक हो। हम अपने कानूनी दायित्वों का पालन करने के लिए आवश्यक सीमा तक आपके व्यक्तिगत डेटा को बनाए रखेंगे और उपयोग करेंगे (उदाहरण के लिए, यदि हमें लागू कानूनों का पालन करने के लिए आपके डेटा को बनाए रखना आवश्यक है), विवादों का समाधान, और हमारे कानूनी समझौतों और नीतियों को लागू करना।</p>
         </div>
         <div class="paragraph">
           <p>टीम आंतरिक विश्लेषण उद्देश्यों के लिए उपयोग डेटा को भी बनाए रखेगी। उपयोग डेटा को आम तौर पर कम समय के लिए रखा जाता है, सिवाय इसके कि जब इस डेटा का उपयोग सुरक्षा को मजबूत करने या हमारी सेवा की कार्यक्षमता में सुधार करने के लिए किया जाता है, या हम इस डेटा को लंबे समय तक बनाए रखने के लिए कानूनी रूप से बाध्य हैं।</p>
@@ -495,7 +495,7 @@
               </li>
               <li>
                 <p>हमारी वेबसाइट पर इस पेज पर जाकर:<br>
-                  <a href="../../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact</a>< /पी>
+                  <a href="../../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact</a></p>
               </li>
             </ul>
           </div>
@@ -599,7 +599,6 @@
         </div>
 
         <div class="pricon">
-          <a href="../../hi-in/privacy-policy/"><h5>गोपनीयता नीति</h5></a>
           <a href="../../hi-in/contact/"><h5>हमसे संपर्क करें</h5></a>
         </div>
 
