--- a/en-uk/privacy-policy/index.html
+++ b/en-uk/privacy-policy/index.html
@@ -212,7 +212,7 @@
               <p><strong>Account</strong> means a unique account created for You to access our Service or parts of our Service.</p>
             </li>
             <li>
-              <p><strong>Team</strong> (referred to as either "the Team", "We", "Us" or "Our" in this Agreement) refers to RareFrostbites, SJDM, Bulacan.</p>
+              <p><strong>Team</strong> (referred to as either "the Team", "We", "Us" or "Our" in this Agreement) refers to RareFrostbites.</p>
             </li>
             <li>
               <p><strong>Cookies</strong> are small files that are placed on Your computer, mobile device or any other device by a website, containing the details of Your browsing history on that website among its many uses.</p>
