--- a/es-es/privacy-policy/index.html
+++ b/es-es/privacy-policy/index.html
@@ -212,7 +212,7 @@
               <p><strong>Cuenta</strong> significa una cuenta única creada para que Usted acceda a nuestro Servicio o partes de nuestro Servicio.</p>
             </li>
             <li>
-              <p><strong>Equipo</strong> (referida como "la Equipo", "Nosotros", "Nos" o "Nuestro" en este Acuerdo) se refiere a RareFrostbites, SJDM, Bulacan.</p>
+              <p><strong>Equipo</strong> (referida como "la Equipo", "Nosotros", "Nos" o "Nuestro" en este Acuerdo) se refiere a RareFrostbites.</p>
             </li>
             <li>
               <p><strong>Cookies</strong> son pequeños archivos que un sitio web coloca en Su computadora, dispositivo móvil o cualquier otro dispositivo, y contienen los detalles de Su historial de navegación en ese sitio web entre sus muchos usos.</p>
