--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -212,7 +212,7 @@
               <p><strong>Account</strong> means isang unique na account na ginawa para sa Iyo para ma-access ang aming Service o mga part ng aming Service.</p>
             </li>
             <li>
-              <p><strong>Team</strong> (nai-refer bilang "ang Team", "Kami", "Tayo" o "Amin" sa Agreement na'to) ay nagre-reffer sa RareFrostbites, SJDM, Bulacan.</p>
+              <p><strong>Team</strong> (nai-refer bilang "ang Team", "Kami", "Tayo" o "Amin" sa Agreement na'to) ay nagre-reffer sa RareFrostbites.</p>
             </li>
             <li>
               <p><strong>Mga Cookie</strong> ay mga small file na pini-place sa computer Mo, mobile device or any other device ng isang website, na nagko-contain ng mga detail ng browsing history Mo sa website na 'yon kasama ng maraming gamit nito.</p>
