--- a/hi-in/privacy-policy/index.html
+++ b/hi-in/privacy-policy/index.html
@@ -212,7 +212,7 @@
               <p><strong>खाता</strong> का अर्थ है हमारी सेवा या हमारी सेवा के कुछ हिस्सों तक पहुंचने के लिए आपके लिए बनाया गया एक अनूठा खाता।</p>
             </li>
             <li>
-              <p><strong>टीम</strong> (इस समझौते में "टीम", "हम", "हम" या "हमारा" के रूप में संदर्भित) रेयरफ्रॉस्टबाइट्स, एसजेडीएम, बुलाकैन को संदर्भित करता है।</p>
+              <p><strong>टीम</strong> (इस समझौते में या तो "टीम", "हम", "हम" या "हमारा" के रूप में संदर्भित) RareFrostbites को संदर्भित करता है।</p>
             </li>
             <li>
               <p><strong>कुकीज़</strong> वे छोटी फ़ाइलें हैं जो आपके कंप्यूटर, मोबाइल डिवाइस या किसी अन्य डिवाइस पर किसी वेबसाइट द्वारा रखी जाती हैं, जिसमें उस वेबसाइट पर आपके ब्राउज़िंग इतिहास का विवरण होता है और इसके कई उपयोग होते हैं।</p>
