--- a/zh-cn/ASSETPAGE.html
+++ b/zh-cn/ASSETPAGE.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="TITLEPAGE2">
     <meta name="description" content="DESCRPTION">
-    <meta name="keywords" content="Homepage, RareFrostbites">
+    <meta name="keywords" content="Content, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Chinese (Simplified)">
     <meta charset="utf-8"> 
