--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="Privacy Policy">
     <meta name="description" content="Every safety ng mga Frostbits ay top priority namin.">
-    <meta name="keywords" content="Homepage, RareFrostbites">
+    <meta name="keywords" content="Privacy Policy, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Filipino">
     <meta charset="utf-8"> 
