--- a/hi-in/privacy-policy.html
+++ b/hi-in/privacy-policy.html
@@ -33,6 +33,9 @@
 
     <meta http-equiv="refresh" content="0;url=privacy-policy/" />
 
+
+    <meta http-equiv="refresh" content="0;url=privacy-policy/" />
+
     
     <!--address bar color-->
     <meta name="theme-color" content="#15152A">
