--- a/ja-jp/privacy-policy.html
+++ b/ja-jp/privacy-policy.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="プライバシーポリシー">
     <meta name="description" content="すべてのFrostbitsの安全性は私たちの最優先事項です。">
-    <meta name="keywords" content="Content, RareFrostbites">
+    <meta name="keywords" content="Privacy Policy, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Japanese">
     <meta charset="utf-8"> 
@@ -29,6 +29,9 @@
 
     <link rel="shortcut icon" href="../media/assets/privacy-policy/rfbsafe.ico">
     <link rel="canonical" href="https://rarefrostbites.pages.dev/privacy-policy/" />
+
+
+    <meta http-equiv="refresh" content="0;url=privacy-policy/" />
 
     
     <!--address bar color-->
