--- a/ja-jp/privacy-policy/index.html
+++ b/ja-jp/privacy-policy/index.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="プライバシーポリシー">
     <meta name="description" content="すべてのFrostbitsの安全性は私たちの最優先事項です。">
-    <meta name="keywords" content="Content, RareFrostbites">
+    <meta name="keywords" content="Privacy Policy, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Japanese">
     <meta charset="utf-8"> 
