--- a/ja-jp/privacy-policy/index.html
+++ b/ja-jp/privacy-policy/index.html
@@ -469,7 +469,7 @@
         </div>
         
         <div class="title">
-            <h1>Otへのリンク彼女のウェブサイト</h1>
+            <h1>他のウェブサイトへのリンク</h1>
         </div>
         <div class="paragraph">
           <p>当社のサービスには、当社が運営していない他のウェブサイトへのリンクが含まれている場合があります。サードパーティのリンクをクリックすると、そのサードパーティのサイトに移動します。アクセスするすべてのサイトのプライバシーポリシーを確認することを強くお勧めします。</p>
