--- a/ms-my/privacy-policy/index.html
+++ b/ms-my/privacy-policy/index.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="Dasar Privasi">
     <meta name="description" content="Keselamatan setiap Frostbits adalah keutamaan kami.">
-    <meta name="keywords" content="Content, RareFrostbites">
+    <meta name="keywords" content="Privacy Policy, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Malay">
     <meta charset="utf-8"> 
