--- a/my-bu/privacy-policy/index.html
+++ b/my-bu/privacy-policy/index.html
@@ -19,7 +19,7 @@
     
     <meta name="title" content="ကိုယ်ရေးအချက်အလက်မူဝါဒ">
     <meta name="description" content="Frostbits တိုင်း၏ ဘေးကင်းမှုသည် ကျွန်ုပ်တို့၏ ထိပ်တန်းဦးစားပေးဖြစ်သည်။">
-    <meta name="keywords" content="Content, RareFrostbites">
+    <meta name="keywords" content="Privacy Policy, RareFrostbites">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="Burmese">
     <meta charset="utf-8"> 
