--- a/ja-jp/privacy-policy/index.html
+++ b/ja-jp/privacy-policy/index.html
@@ -548,7 +548,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://discord.com/invite/Rz5y9S4kj9" target="_blank">
+                <a href="https://discord.gg/Rz5y9S4kj9" target="_blank">
                   <img src="../../media/assets/social_media/discord.svg" alt="Discordロゴ">
                 </a>
               </div>
@@ -599,7 +599,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://t.me/rarefrostbites" target="_blank">
+                <a href="https://guilded.gg/RareFrostbites" target="_blank">
                   <img src="../../media/assets/social_media/guilded.svg" alt="Guildedロゴ">
                 </a>
               </div>
