--- a/km-kh/404.html
+++ b/km-kh/404.html
@@ -207,7 +207,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://discord.com/invite/Rz5y9S4kj9" target="_blank">
+                <a href="https://discord.gg/Rz5y9S4kj9" target="_blank">
                   <img src="https://rarefrostites.pages.dev/media/assets/social_media/discord.svg" alt="រូបសញ្ញា Discord">
                 </a>
               </div>
@@ -258,7 +258,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://t.me/rarefrostbites" target="_blank">
+                <a href="https://guilded.gg/RareFrostbites" target="_blank">
                   <img src="https://rarefrostites.pages.dev/media/assets/social_media/guilded.svg" alt="រូបសញ្ញា Guilded">
                 </a>
               </div>
