--- a/ru-ru/index.html
+++ b/ru-ru/index.html
@@ -274,7 +274,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://discord.com/invite/Rz5y9S4kj9" target="_blank">
+                <a href="https://discord.gg/Rz5y9S4kj9" target="_blank">
                   <img src="../media/assets/social_media/discord.svg" alt="Логотип Discord">
                 </a>
               </div>
@@ -325,7 +325,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://guilded.gg/rarefrostbites" target="_blank">
+                <a href="https://guilded.gg/RareFrostbites" target="_blank">
                   <img src="../media/assets/social_media/guilded.svg" alt="Логотип Guilded">
                 </a>
               </div>
