--- a/en-uk/privacy-policy/index.html
+++ b/en-uk/privacy-policy/index.html
@@ -538,7 +538,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://discord.com/invite/Rz5y9S4kj9" target="_blank">
+                <a href="https://discord.gg/Rz5y9S4kj9" target="_blank">
                   <img src="../../media/assets/social_media/discord.svg" alt="Discord logo">
                 </a>
               </div>
@@ -589,7 +589,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://t.me/rarefrostbites" target="_blank">
+                <a href="https://guilded.gg/RareFrostbites" target="_blank">
                   <img src="../../media/assets/social_media/guilded.svg" alt="Guilded logo">
                 </a>
               </div>
