--- a/ko-kr/ASSETPAGE.html
+++ b/ko-kr/ASSETPAGE.html
@@ -208,7 +208,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://discord.com/invite/Rz5y9S4kj9" target="_blank">
+                <a href="https://discord.gg/Rz5y9S4kj9" target="_blank">
                   <img src="../media/assets/social_media/discord.svg" alt="Discord 로고">
                 </a>
               </div>
@@ -259,7 +259,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://t.me/rarefrostbites" target="_blank">
+                <a href="https://guilded.gg/RareFrostbites" target="_blank">
                   <img src="../media/assets/social_media/guilded.svg" alt="Guilded 로고">
                 </a>
               </div>
