--- a/pt-pt/privacy-policy/index.html
+++ b/pt-pt/privacy-policy/index.html
@@ -219,7 +219,7 @@
             
             <div class="image-bounce">
               <div class="image">
-                <a href="https://discord.com/invite/Rz5y9S4kj9" target="_blank">
+                <a href="https://discord.gg/Rz5y9S4kj9" target="_blank">
                   <img src="../../media/assets/social_media/discord.svg" alt="Discord logo">
                 </a>
               </div>
