added a new icon for links that'll be a guide for opening links in new tab

--- a/km-kh/privacy-policy/index.html
+++ b/km-kh/privacy-policy/index.html
@@ -183,7 +183,7 @@
           <p>គោលការណ៍ឯកជនភាពនេះពិពណ៌នាអំពីគោលការណ៍ និងនីតិវិធីរបស់យើងលើការប្រមូល ការប្រើប្រាស់ និងការបង្ហាញព័ត៌មានរបស់អ្នក នៅពេលអ្នកប្រើប្រាស់សេវាកម្ម ហើយប្រាប់អ្នកអំពីសិទ្ធិឯកជនភាពរបស់អ្នក និងរបៀបដែលច្បាប់ការពារអ្នក។</p>
         </div>
         <div class="paragraph">
-          <p>យើងប្រើប្រាស់ទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នក ដើម្បីផ្តល់ និងកែលម្អសេវាកម្ម។ តាមរយៈការប្រើប្រាស់សេវាកម្ម អ្នកយល់ព្រមចំពោះការប្រមូល និងប្រើប្រាស់ព័ត៌មានដោយអនុលោមតាមគោលការណ៍ឯកជនភាពនេះ។ គោលការណ៍ឯកជនភាពនេះត្រូវបានបង្កើតឡើងដោយមានជំនួយពី <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">គំរូគោលការណ៍ឯកជនភាព</a> .</p>
+          <p>យើងប្រើប្រាស់ទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នក ដើម្បីផ្តល់ និងកែលម្អសេវាកម្ម។ តាមរយៈការប្រើប្រាស់សេវាកម្ម អ្នកយល់ព្រមចំពោះការប្រមូល និងប្រើប្រាស់ព័ត៌មានដោយអនុលោមតាមគោលការណ៍ឯកជនភាពនេះ។ គោលការណ៍ឯកជនភាពនេះត្រូវបានបង្កើតឡើងដោយមានជំនួយពី <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">គំរូគោលការណ៍ឯកជនភាព <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a>.</p>
         </div>
 
 
@@ -234,7 +234,7 @@
               <p><strong>ទិន្នន័យការប្រើប្រាស់</strong> សំដៅលើទិន្នន័យដែលប្រមូលបានដោយស្វ័យប្រវត្តិ ទាំងដែលបង្កើតឡើងដោយការប្រើប្រាស់សេវាកម្ម ឬពីហេដ្ឋារចនាសម្ព័ន្ធសេវាកម្មខ្លួនឯង (ឧទាហរណ៍ រយៈពេលនៃការចូលមើលទំព័រ)។</p>
             </li>
             <li>
-              <p><strong>គេហទំព័រ</strong> សំដៅលើក្រុម RareFrostbites ដែលអាចរកបានពី <a href="../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></ ទំ >
+              <p><strong>គេហទំព័រ</strong> សំដៅលើក្រុម RareFrostbites ដែលអាចរកបានពី <a href="../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></p>
             </li>
             <li>
               <p><strong>អ្នក</strong> មានន័យថាបុគ្គលដែលចូលប្រើ ឬប្រើប្រាស់សេវាកម្ម ឬក្រុម/ស្ទូឌីយោ ឬនីតិបុគ្គលផ្សេងទៀតក្នុងនាមបុគ្គលនោះកំពុងចូលប្រើ ឬប្រើប្រាស់សេវាកម្មនេះ តាមដែលអាចអនុវត្តបាន។</p>
@@ -269,7 +269,7 @@
           <p>ទិន្នន័យនៃការប្រើប្រាស់ត្រូវបានប្រមូលដោយស្វ័យប្រវត្តិនៅពេលប្រើប្រាស់សេវាកម្ម។</p>
         </div>
         <div class="paragraph">
-          <p>ទិន្នន័យនៃការប្រើប្រាស់អាចរួមបញ្ចូលព័ត៌មានដូចជា ទេវីរបស់អ្នកជាដើម។អាសយដ្ឋានពិធីការអ៊ីនធឺណិតរបស់ ce (ឧទាហរណ៍អាសយដ្ឋាន IP) ប្រភេទកម្មវិធីរុករកតាមអ៊ីនធឺណិត កំណែកម្មវិធីរុករក ទំព័រនៃសេវាកម្មរបស់យើងដែលអ្នកចូលមើល ពេលវេលា និងកាលបរិច្ឆេទនៃការចូលមើលរបស់អ្នក ពេលវេលាចំណាយលើទំព័រទាំងនោះ ឧបករណ៍កំណត់អត្តសញ្ញាណឧបករណ៍ពិសេស និងទិន្នន័យវិភាគផ្សេងទៀត។</ ទំ >
+          <p>ទិន្នន័យនៃការប្រើប្រាស់អាចរួមបញ្ចូលព័ត៌មានដូចជា ទេវីរបស់អ្នកជាដើម។អាសយដ្ឋានពិធីការអ៊ីនធឺណិតរបស់ ce (ឧទាហរណ៍អាសយដ្ឋាន IP) ប្រភេទកម្មវិធីរុករកតាមអ៊ីនធឺណិត កំណែកម្មវិធីរុករក ទំព័រនៃសេវាកម្មរបស់យើងដែលអ្នកចូលមើល ពេលវេលា និងកាលបរិច្ឆេទនៃការចូលមើលរបស់អ្នក ពេលវេលាចំណាយលើទំព័រទាំងនោះ ឧបករណ៍កំណត់អត្តសញ្ញាណឧបករណ៍ពិសេស និងទិន្នន័យវិភាគផ្សេងទៀត។</p>
         </div>
         <div class="paragraph">
           <p>នៅពេលដែលអ្នកចូលប្រើសេវាកម្មដោយ ឬតាមរយៈឧបករណ៍ចល័ត យើងអាចប្រមូលព័ត៌មានមួយចំនួនដោយស្វ័យប្រវត្តិ រួមទាំង ប៉ុន្តែមិនកំណត់ចំពោះប្រភេទឧបករណ៍ចល័តដែលអ្នកប្រើ លេខសម្គាល់ឧបករណ៍ចល័តរបស់អ្នក អាសយដ្ឋាន IP នៃឧបករណ៍ចល័តរបស់អ្នក , ប្រព័ន្ធប្រតិបត្តិការចល័តរបស់អ្នក, ប្រភេទនៃកម្មវិធីរុករកអ៊ីនធឺណិតចល័តដែលអ្នកប្រើ, ឧបករណ៍កំណត់អត្តសញ្ញាណតែមួយគត់ និងទិន្នន័យវិភាគផ្សេងទៀត។</p>
@@ -293,7 +293,7 @@
             </li>
             <li>
               <p>
-                <strong>Flash Cookies។</strong> លក្ខណៈពិសេសមួយចំនួននៃសេវាកម្មរបស់យើងអាចប្រើវត្ថុដែលបានរក្សាទុកក្នុងមូលដ្ឋាន (ឬ Flash Cookies) ដើម្បីប្រមូល និងរក្សាទុកព័ត៌មានអំពីចំណូលចិត្តរបស់អ្នក ឬសកម្មភាពរបស់អ្នកនៅលើសេវាកម្មរបស់យើង។ Flash Cookies មិន​ត្រូវ​បាន​គ្រប់​គ្រង​ដោយ​ការ​កំណត់​កម្មវិធី​រុករក​ដូច​គ្នា​នឹង​អ្វី​ដែល​បាន​ប្រើ​សម្រាប់ Browser Cookies។ សម្រាប់ព័ត៌មានបន្ថែមអំពីរបៀបដែលអ្នកអាចលុប Flash Cookies សូមអាន "តើខ្ញុំអាចផ្លាស់ប្តូរការកំណត់សម្រាប់ការបិទ ឬលុបវត្ថុដែលបានចែករំលែកក្នុងតំបន់នៅឯណា?" មាននៅ <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external" nofollow_blank"> https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_</a>
+                <strong>Flash Cookies។</strong> លក្ខណៈពិសេសមួយចំនួននៃសេវាកម្មរបស់យើងអាចប្រើវត្ថុដែលបានរក្សាទុកក្នុងមូលដ្ឋាន (ឬ Flash Cookies) ដើម្បីប្រមូល និងរក្សាទុកព័ត៌មានអំពីចំណូលចិត្តរបស់អ្នក ឬសកម្មភាពរបស់អ្នកនៅលើសេវាកម្មរបស់យើង។ Flash Cookies មិន​ត្រូវ​បាន​គ្រប់​គ្រង​ដោយ​ការ​កំណត់​កម្មវិធី​រុករក​ដូច​គ្នា​នឹង​អ្វី​ដែល​បាន​ប្រើ​សម្រាប់ Browser Cookies។ សម្រាប់ព័ត៌មានបន្ថែមអំពីរបៀបដែលអ្នកអាចលុប Flash Cookies សូមអាន "តើខ្ញុំអាចផ្លាស់ប្តូរការកំណត់សម្រាប់ការបិទ ឬលុបវត្ថុដែលបានចែករំលែកក្នុងតំបន់នៅឯណា?" មាននៅ <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank"> https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a>
               </p>
             </li>
             <li>
@@ -304,7 +304,7 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>ខូគីអាចជាខូគី "បន្ត" ឬ "វគ្គ"។ ខូគីដែលជាប់លាប់នៅតែមាននៅលើកុំព្យូទ័រផ្ទាល់ខ្លួន ឬឧបករណ៍ចល័តរបស់អ្នក នៅពេលអ្នកបិទអ៊ីនធឺណិត ខណៈពេលដែលខូឃីសម័យត្រូវបានលុបភ្លាមៗនៅពេលអ្នកបិទកម្មវិធីរុករកតាមអ៊ីនធឺណិតរបស់អ្នក។ ស្វែងយល់បន្ថែមអំពីខូគី៖ <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">ការប្រើប្រាស់ខូគីដោយគោលការណ៍ឯកជនភាពឥតគិតថ្លៃ</a> .</p>
+          <p>ខូគីអាចជាខូគី "បន្ត" ឬ "វគ្គ"។ ខូគីដែលជាប់លាប់នៅតែមាននៅលើកុំព្យូទ័រផ្ទាល់ខ្លួន ឬឧបករណ៍ចល័តរបស់អ្នក នៅពេលអ្នកបិទអ៊ីនធឺណិត ខណៈពេលដែលខូឃីសម័យត្រូវបានលុបភ្លាមៗនៅពេលអ្នកបិទកម្មវិធីរុករកតាមអ៊ីនធឺណិតរបស់អ្នក។ ស្វែងយល់បន្ថែមអំពីខូគី៖ <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">ការប្រើប្រាស់ខូគីដោយគោលការណ៍ឯកជនភាពឥតគិតថ្លៃ <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a>.</p>
         </div>
         <div class="paragraph">
           <p>យើងប្រើទាំង Session និង Persistent Cookies សម្រាប់គោលបំណងដែលបានកំណត់ខាងក្រោម៖</p>
@@ -350,7 +350,7 @@
               <p><strong>ដើម្បីគ្រប់គ្រងគណនីរបស់អ្នក៖</strong> ដើម្បីគ្រប់គ្រងការចុះឈ្មោះរបស់អ្នកជាអ្នកប្រើប្រាស់សេវាកម្ម។ ទិន្នន័យផ្ទាល់ខ្លួនដែលអ្នកផ្តល់ឱ្យអាចផ្តល់ឱ្យអ្នកនូវការចូលទៅកាន់មុខងារផ្សេងៗនៃសេវាកម្មដែលមានសម្រាប់អ្នកជាអ្នកប្រើប្រាស់ដែលបានចុះឈ្មោះ។</p>
             </li>
             <li>
-              <p><strong>សម្រាប់ការអនុវត្តកិច្ចសន្យា៖</strong> ការអភិវឌ្ឍន៍ ការអនុលោមតាម និងការអនុវត្តកិច្ចសន្យាទិញសម្រាប់ផលិតផល របស់របរ ឬសេវាកម្មដែលអ្នកបានទិញ ឬកិច្ចសន្យាផ្សេងទៀតជាមួយយើងតាមរយៈសេវាកម្ម។</ ទំ >
+              <p><strong>សម្រាប់ការអនុវត្តកិច្ចសន្យា៖</strong> ការអភិវឌ្ឍន៍ ការអនុលោមតាម និងការអនុវត្តកិច្ចសន្យាទិញសម្រាប់ផលិតផល របស់របរ ឬសេវាកម្មដែលអ្នកបានទិញ ឬកិច្ចសន្យាផ្សេងទៀតជាមួយយើងតាមរយៈសេវាកម្ម។</p>
             </li>
             <li>
               <p><strong>ដើម្បីទាក់ទងអ្នក៖</strong> ដើម្បីទាក់ទងអ្នកតាមអ៊ីមែល ការហៅទូរសព្ទ សារ SMS ឬទម្រង់ទំនាក់ទំនងអេឡិចត្រូនិកដែលមានតម្លៃស្មើផ្សេងទៀត ដូចជាការជូនដំណឹងជំរុញរបស់កម្មវិធីទូរស័ព្ទទាក់ទងនឹងការអាប់ដេត ឬការទំនាក់ទំនងព័ត៌មានទាក់ទងនឹងមុខងារនានា។ ផលិតផល ឬសេវាកម្មដែលបានចុះកិច្ចសន្យា រួមទាំងការធ្វើបច្ចុប្បន្នភាពសុវត្ថិភាព នៅពេលចាំបាច់ ឬសមហេតុផលសម្រាប់ការអនុវត្តរបស់ពួកគេ។</p>
@@ -387,7 +387,7 @@
           <h2>ការរក្សាទុកទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នក</h2>
         </div>
         <div class="paragraph">
-          <p>ក្រុមការងារនឹងរក្សាទុកទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នកសម្រាប់តែដរាបណាចាំបាច់សម្រាប់គោលបំណងដែលមានចែងក្នុងគោលការណ៍ឯកជនភាពនេះ។ យើងនឹងរក្សា និងប្រើប្រាស់ទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នកក្នុងកម្រិតចាំបាច់ ដើម្បីអនុវត្តតាមកាតព្វកិច្ចផ្លូវច្បាប់របស់យើង (ឧទាហរណ៍ ប្រសិនបើយើងតម្រូវឱ្យរក្សាទុកទិន្នន័យរបស់អ្នកដើម្បីអនុលោមតាមច្បាប់ជាធរមាន) ដោះស្រាយវិវាទ និងអនុវត្តកិច្ចព្រមព្រៀង និងគោលនយោបាយផ្លូវច្បាប់របស់យើង។</ ទំ >
+          <p>ក្រុមការងារនឹងរក្សាទុកទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នកសម្រាប់តែដរាបណាចាំបាច់សម្រាប់គោលបំណងដែលមានចែងក្នុងគោលការណ៍ឯកជនភាពនេះ។ យើងនឹងរក្សា និងប្រើប្រាស់ទិន្នន័យផ្ទាល់ខ្លួនរបស់អ្នកក្នុងកម្រិតចាំបាច់ ដើម្បីអនុវត្តតាមកាតព្វកិច្ចផ្លូវច្បាប់របស់យើង (ឧទាហរណ៍ ប្រសិនបើយើងតម្រូវឱ្យរក្សាទុកទិន្នន័យរបស់អ្នកដើម្បីអនុលោមតាមច្បាប់ជាធរមាន) ដោះស្រាយវិវាទ និងអនុវត្តកិច្ចព្រមព្រៀង និងគោលនយោបាយផ្លូវច្បាប់របស់យើង។</p>
         </div>
         <div class="paragraph">
           <p>ក្រុមការងារក៏នឹងរក្សាទិន្នន័យប្រើប្រាស់សម្រាប់គោលបំណងវិភាគផ្ទៃក្នុងផងដែរ។ ជាទូទៅទិន្នន័យនៃការប្រើប្រាស់ត្រូវបានរក្សាទុកក្នុងរយៈពេលដ៏ខ្លី លើកលែងតែនៅពេលដែលទិន្នន័យនេះត្រូវបានប្រើដើម្បីពង្រឹងសុវត្ថិភាព ឬកែលម្អមុខងារនៃសេវាកម្មរបស់យើង ឬយើងមានកាតព្វកិច្ចស្របច្បាប់ក្នុងការរក្សាទិន្នន័យនេះក្នុងរយៈពេលយូរ។</p>
@@ -489,12 +489,12 @@
           <ul>
             <li>
               <p>តាមអ៊ីមែល៖<br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" style="margin-left: 10px;">rarefrostbitesteam@gmail.com</a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" style="margin-left: 10px;">rarefrostbitesteam@outlook.com</a></p>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a><br>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a></p>
             </li>
             <li>
               <p>ដោយចូលទៅកាន់ទំព័រនេះនៅលើគេហទំព័ររបស់យើង៖<br>
-                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact</a>< /p>
+                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a></p>
             </li>
           </ul>
         </div>
