--- a/ms-my/privacy-policy/index.html
+++ b/ms-my/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>Dasar Privasi ini menerangkan dasar dan prosedur Kami tentang pengumpulan, penggunaan dan pendedahan maklumat Anda apabila Anda menggunakan Perkhidmatan dan memberitahu Anda tentang hak privasi Anda dan cara undang-undang melindungi Anda.</p>
         </div>
         <div class="paragraph">
-          <p>Kami menggunakan data Peribadi Anda untuk menyediakan dan menambah baik Perkhidmatan. Dengan menggunakan Perkhidmatan, Anda bersetuju menerima pengumpulan dan penggunaan maklumat mengikut Dasar Privasi ini. Dasar Privasi ini telah dibuat dengan bantuan <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Templat Dasar Privasi</a> .</p>
+          <p>Kami menggunakan data Peribadi Anda untuk menyediakan dan menambah baik Perkhidmatan. Dengan menggunakan Perkhidmatan, Anda bersetuju menerima pengumpulan dan penggunaan maklumat mengikut Dasar Privasi ini. Dasar Privasi ini telah dibuat dengan bantuan <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Templat Dasar Privasi <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a>.</p>
         </div>
 
 
@@ -245,7 +245,7 @@
               <p><strong>Data Penggunaan</strong> merujuk kepada data yang dikumpul secara automatik, sama ada dijana melalui penggunaan Perkhidmatan atau daripada infrastruktur Perkhidmatan itu sendiri (contohnya, tempoh lawatan halaman).</p>
             </li>
             <li>
-              <p><strong>Tapak web</strong> merujuk kepada Pasukan RareFrostbites, boleh diakses daripada <a href="../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></ p>
+              <p><strong>Tapak web</strong> merujuk kepada Pasukan RareFrostbites, boleh diakses daripada <a href="../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a></p>
             </li>
             <li>
               <p><strong>Anda</strong> bermaksud individu yang mengakses atau menggunakan Perkhidmatan, atau pasukan/studio, atau entiti undang-undang lain bagi pihak individu tersebut mengakses atau menggunakan Perkhidmatan, mengikut mana yang berkenaan.</p>
@@ -280,7 +280,7 @@
           <p>Data Penggunaan dikumpul secara automatik apabila menggunakan Perkhidmatan.</p>
         </div>
         <div class="paragraph">
-          <p>Data Penggunaan mungkin termasuk maklumat seperti Devi Andaalamat Protokol Internet ce (cth alamat IP), jenis penyemak imbas, versi penyemak imbas, halaman Perkhidmatan kami yang Anda lawati, masa dan tarikh lawatan Anda, masa yang dihabiskan pada halaman tersebut, pengecam peranti unik dan data diagnostik lain.</ p>
+          <p>Data Penggunaan mungkin termasuk maklumat seperti Devi Andaalamat Protokol Internet ce (cth alamat IP), jenis penyemak imbas, versi penyemak imbas, halaman Perkhidmatan kami yang Anda lawati, masa dan tarikh lawatan Anda, masa yang dihabiskan pada halaman tersebut, pengecam peranti unik dan data diagnostik lain.</p>
         </div>
         <div class="paragraph">
           <p>Apabila Anda mengakses Perkhidmatan melalui atau melalui peranti mudah alih, Kami mungkin mengumpul maklumat tertentu secara automatik, termasuk, tetapi tidak terhad kepada, jenis peranti mudah alih yang Anda gunakan, ID unik peranti mudah alih anda, alamat IP peranti mudah alih Anda , Sistem pengendalian mudah alih anda, jenis penyemak imbas Internet mudah alih yang anda gunakan, pengecam peranti unik dan data diagnostik lain.</p>
@@ -304,7 +304,7 @@
             </li>
             <li>
               <p>
-                <strong>Kuki Flash.</strong> Ciri tertentu Perkhidmatan kami mungkin menggunakan objek tersimpan setempat (atau Kuki Flash) untuk mengumpul dan menyimpan maklumat tentang pilihan Anda atau aktiviti Anda pada Perkhidmatan kami. Kuki Flash tidak diuruskan oleh tetapan penyemak imbas yang sama seperti yang digunakan untuk Kuki Penyemak Imbas. Untuk mendapatkan maklumat lanjut tentang cara Anda boleh memadam Kuki Flash, sila baca "Di manakah saya boleh menukar tetapan untuk melumpuhkan atau memadam objek kongsi setempat?" tersedia di <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener"" target="_blankener" https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_</a>
+                <strong>Kuki Flash.</strong> Ciri tertentu Perkhidmatan kami mungkin menggunakan objek tersimpan setempat (atau Kuki Flash) untuk mengumpul dan menyimpan maklumat tentang pilihan Anda atau aktiviti Anda pada Perkhidmatan kami. Kuki Flash tidak diuruskan oleh tetapan penyemak imbas yang sama seperti yang digunakan untuk Kuki Penyemak Imbas. Untuk mendapatkan maklumat lanjut tentang cara Anda boleh memadam Kuki Flash, sila baca "Di manakah saya boleh menukar tetapan untuk melumpuhkan atau memadam objek kongsi setempat?" tersedia di <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a>
               </p>
             </li>
             <li>
@@ -315,7 +315,7 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>Kuki boleh menjadi Kuki "Berterusan" atau "Sesi". Kuki Berterusan kekal pada komputer peribadi atau peranti mudah alih anda apabila Anda pergi ke luar talian, manakala Kuki Sesi dipadamkan sebaik sahaja Anda menutup pelayar web Anda. Ketahui lebih lanjut tentang kuki: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">Penggunaan Kuki oleh Dasar Privasi Percuma</a> .</p>
+          <p>Kuki boleh menjadi Kuki "Berterusan" atau "Sesi". Kuki Berterusan kekal pada komputer peribadi atau peranti mudah alih anda apabila Anda pergi ke luar talian, manakala Kuki Sesi dipadamkan sebaik sahaja Anda menutup pelayar web Anda. Ketahui lebih lanjut tentang kuki: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">Penggunaan Kuki oleh Dasar Privasi Percuma <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a>.</p>
         </div>
         <div class="paragraph">
           <p>Kami menggunakan kedua-dua Sesi dan Kuki Gigih untuk tujuan yang dinyatakan di bawah:</p>
@@ -361,7 +361,7 @@
               <p><strong>Untuk mengurus Akaun Anda:</strong> untuk mengurus pendaftaran Anda sebagai pengguna Perkhidmatan. Data Peribadi yang Anda berikan boleh memberi Anda akses kepada fungsi berbeza Perkhidmatan yang tersedia untuk Anda sebagai pengguna berdaftar.</p>
             </li>
             <li>
-              <p><strong>Untuk pelaksanaan kontrak:</strong> pembangunan, pematuhan dan aku janji kontrak pembelian untuk produk, item atau perkhidmatan yang telah Anda beli atau mana-mana kontrak lain dengan Kami melalui Perkhidmatan.</ p>
+              <p><strong>Untuk pelaksanaan kontrak:</strong> pembangunan, pematuhan dan aku janji kontrak pembelian untuk produk, item atau perkhidmatan yang telah Anda beli atau mana-mana kontrak lain dengan Kami melalui Perkhidmatan.</p>
             </li>
             <li>
               <p><strong>Untuk menghubungi Anda:</strong> Untuk menghubungi Anda melalui e-mel, panggilan telefon, SMS atau bentuk komunikasi elektronik lain yang setara, seperti pemberitahuan tolak aplikasi mudah alih mengenai kemas kini atau komunikasi bermaklumat yang berkaitan dengan fungsi, produk atau perkhidmatan kontrak, termasuk kemas kini keselamatan, apabila perlu atau munasabah untuk pelaksanaannya.</p>
@@ -398,7 +398,7 @@
           <h2>Pengekalan Data Peribadi Anda</h2>
         </div>
         <div class="paragraph">
-          <p>Pasukan akan mengekalkan Data Peribadi Anda hanya selama yang diperlukan untuk tujuan yang ditetapkan dalam Dasar Privasi ini. Kami akan mengekalkan dan menggunakan Data Peribadi Anda setakat yang diperlukan untuk mematuhi kewajipan undang-undang kami (contohnya, jika kami dikehendaki mengekalkan data anda untuk mematuhi undang-undang yang berkenaan), menyelesaikan pertikaian dan menguatkuasakan perjanjian dan dasar undang-undang kami.</ p>
+          <p>Pasukan akan mengekalkan Data Peribadi Anda hanya selama yang diperlukan untuk tujuan yang ditetapkan dalam Dasar Privasi ini. Kami akan mengekalkan dan menggunakan Data Peribadi Anda setakat yang diperlukan untuk mematuhi kewajipan undang-undang kami (contohnya, jika kami dikehendaki mengekalkan data anda untuk mematuhi undang-undang yang berkenaan), menyelesaikan pertikaian dan menguatkuasakan perjanjian dan dasar undang-undang kami.</p>
         </div>
         <div class="paragraph">
           <p>Pasukan juga akan mengekalkan Data Penggunaan untuk tujuan analisis dalaman. Data Penggunaan biasanya disimpan untuk tempoh masa yang lebih singkat, kecuali apabila data ini digunakan untuk mengukuhkan keselamatan atau untuk meningkatkan kefungsian Perkhidmatan Kami, atau Kami bertanggungjawab di sisi undang-undang untuk mengekalkan data ini untuk tempoh masa yang lebih lama.</p>
@@ -500,12 +500,12 @@
           <ul>
             <li>
               <p>Melalui e-mel:<br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" style="margin-left: 10px;">rarefrostbitesteam@gmail.com</a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" style="margin-left: 10px;">rarefrostbitesteam@outlook.com</a></p>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a><br>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a></p>
             </li>
             <li>
               <p>Dengan melawat halaman ini di tapak web kami:<br>
-                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact</a></p>
+                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <div class="redirect-sign"><img src="../../media/assets/icons/outlined/Open in New.svg" alt="Open in new tab"></div></a></p>
             </li>
           </ul>
         </div>
