--- a/pt-pt/privacy-policy/index.html
+++ b/pt-pt/privacy-policy/index.html
@@ -114,8 +114,7 @@
           <div class="desktop-sidebar-area">
             <a href="../../pt-pt/" style="margin-left: 20px;"><h2>Casa</h2></a>
             <a href="../../pt-pt/apply/"><h2>Aplicar</h3></a>
-            <a href="../../pt-pt/contact/"><h2>Contacta-nos</h3></a>
-            <a href="../../pt-pt/privacy-policy/" style="margin-right: 5px;"><h2>Política de Privacidade</h3></a>
+            <a href="../../pt-pt/contact/" style="margin-right: 5px;"><h2>Contacta-nos</h3></a>
           </div>
         </div>
         <div class="mobile-products" onclick="openProducts()">
@@ -174,7 +173,6 @@
           <a href="../../pt-pt/"><h2>Casa</h2></a>
           <a href="../../pt-pt/apply/"><h2>Aplicar</h2></a>
           <a href="../../pt-pt/contact/"><h2>Contacta-nos</h2></a>
-          <a href="../../pt-pt/privacy-policy/"><h2>Política de Privacidade</h2></a>
         </div>
       </div>
       
@@ -281,7 +279,6 @@
         </div>
 
         <div class="pricon">
-          <a href="../../pt-pt/privacy-policy/"><h5>Política de Privacidade</h5></a>
           <a href="../../pt-pt/contact/"><h5>Contacta-nos</h5></a>
         </div>
 
