--- a/en-us/privacy-policy/index.html
+++ b/en-us/privacy-policy/index.html
@@ -194,7 +194,7 @@
           <p>This Privacy Policy describes Our policies and procedures on the collection, use and disclosure of Your information when You use the Service and tells You about Your privacy rights and how the law protects You.</p>
         </div>
         <div class="paragraph">
-          <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Privacy Policy Template <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
+          <p>We use Your Personal data to provide and improve the Service. By using the Service, You agree to the collection and use of information in accordance with this Privacy Policy. This Privacy Policy has been created with the help of the <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/" target="_blank">Privacy Policy Template<div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
         </div>
 
 
@@ -304,7 +304,7 @@
             </li>
             <li>
               <p>
-                <strong>Flash Cookies.</strong> Certain features of our Service may use local stored objects (or Flash Cookies) to collect and store information about Your preferences or Your activity on our Service. Flash Cookies are not managed by the same browser settings as those used for Browser Cookies. For more information on how You can delete Flash Cookies, please read "Where can I change the settings for disabling, or deleting local shared objects?" available at <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_ <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>
+                <strong>Flash Cookies.</strong> Certain features of our Service may use local stored objects (or Flash Cookies) to collect and store information about Your preferences or Your activity on our Service. Flash Cookies are not managed by the same browser settings as those used for Browser Cookies. For more information on how You can delete Flash Cookies, please read "Where can I change the settings for disabling, or deleting local shared objects?" available at <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank"><div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div> https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_</a>
               </p>
             </li>
             <li>
@@ -315,7 +315,7 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>Cookies can be "Persistent" or "Session" Cookies. Persistent Cookies remain on Your personal computer or mobile device when You go offline, while Session Cookies are deleted as soon as You close Your web browser. Learn more about cookies: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">Use of Cookies by Free Privacy Policy <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a>.</p>
+          <p>Cookies can be "Persistent" or "Session" Cookies. Persistent Cookies remain on Your personal computer or mobile device when You go offline, while Session Cookies are deleted as soon as You close Your web browser. Learn more about cookies: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank"><div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div> Use of Cookies by Free Privacy Policy</a>.</p>
         </div>
         <div class="paragraph">
           <p>We use both Session and Persistent Cookies for the purposes set out below:</p>
@@ -500,12 +500,12 @@
           <ul>
             <li>
               <p>By email:<br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@gmail.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a><br>
-                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;">rarefrostbitesteam@outlook.com <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;"><div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div> rarefrostbitesteam@gmail.com</a><br>
+                <a href="mailto:rarefrostbitesteam@gmail.com" target="_blank" style="margin-left: 10px;"><div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div> rarefrostbitesteam@outlook.com</a></p>
             </li>
             <li>
               <p>By visiting this page on our website:<br>
-                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;">https://rarefrostbites.pages.dev/contact <div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div></a></p>
+                <a href="../contact/" rel="external nofollow noopener" target="_blank" style="margin-left: 10px;"><div class="redirect-sign"><img src="../../media/assets/icons/outlined/white/Open in New.svg" alt="Open in new tab"></div> https://rarefrostbites.pages.dev/contact</a></p>
             </li>
           </ul>
         </div>
